tests/EtaX/EtaX.prop/EtaX.prop.03.check
// src:   val t2d: () => Any = prop _                 // ok// 2.13-base ok   
// 2.13-head ok    <no change>
// 2.13-new  ok    <no change>
// 3.0-old   warn 
-- [E099] Syntax Migration Warning: target/tests/EtaX/EtaX.prop/EtaX.prop/EtaX.prop.03.scala:9:28 
9 |  val t2d: () => Any = prop _                 // ok
  |                       ^^^^^^
  |Only function types can be followed by _ but the current expression has type String

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

1 warning found

// 3.0       error
-- [E099] Syntax Error: target/tests/EtaX/EtaX.prop/EtaX.prop/EtaX.prop.03.scala:9:28 
9 |  val t2d: () => Any = prop _                 // ok
  |                       ^^^^^^
  |Only function types can be followed by _ but the current expression has type String

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

1 error found

// 3.1       error <no change>

ok    ok    ok    warn  error error
